objects/iahelp__HelpRelationship__c.object
<CustomObject>
    <description>A join object relating a referring Help Topic to a related Help Topic</description>
    <fields>
        <fullName>iahelp__ReferringTopic__c</fullName>
        <inlineHelpText>The Help Topic Referring to this Related Topic</inlineHelpText>
        <label>Referring Topic</label>
        <referenceTo>iahelp__HelpTopic__c</referenceTo>
        <relationshipName>TopicRelationshipsReferring</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>iahelp__RelatedHelpTopic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Help Topic Related to this Referring Help Topic</inlineHelpText>
        <label>Related Help Topic</label>
        <referenceTo>iahelp__HelpTopic__c</referenceTo>
        <relationshipName>TopicRelationshipsRelated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>iahelp__SemanticTagIsBlank__c</fullName>
        <description>Required to facilitate querying for blank (pre-semantics) relationship types</description>
        <formula>ISBLANK(iahelp__SemanticTag__c)</formula>
        <inlineHelpText>Required to facilitate querying for blank (pre-semantics) relationship types</inlineHelpText>
        <label>Semantic Tag Is Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iahelp__SemanticTag__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Defines the type of relationship that exists between the related Topics</description>
        <inlineHelpText>Defines the type of relationship that exists between the related Topics</inlineHelpText>
        <label>Semantic Tag</label>
        <referenceTo>iahelp__SemanticTag__c</referenceTo>
        <relationshipLabel>Help Relationships</relationshipLabel>
        <relationshipName>HelpRelationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Help Relationship</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Help Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>